--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "mongoose": "^4.8.0",
     "mongoose-random": "^0.1.1",
     "morgan": "^1.7.0",
+    "nodemailer": "^4.4.1",
     "spawncommand": "^1.0.1",
     "util": "^0.10.3",
     "validator": "^6.2.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.16.0",
     "chai": "^3.5.0",
